--- a/FDA_Recall_Lakshmi.ipynb
+++ b/FDA_Recall_Lakshmi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "af7e14aa-388c-4c97-b32a-0b7b267bd4a0",
    "metadata": {},
    "outputs": [],
@@ -30,12 +30,12 @@
     "    recall_df = pd.DataFrame(recalls)\n",
     "    \n",
     "    # Save the DataFrame to a CSV file\n",
-    "   # recall_df.to_csv('output_data/fda_drug_enforcement_data.csv', index=False)"
+    "    #recall_df.to_csv('output_data/fda_drug_enforcement_data.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "da124936-e349-42fd-917b-f19ecc54d691",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
+   "id": "ddcbbf6d-7d5c-424b-afda-2c1687ed0c1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Save cleaned DataFrame to output\n",
+    "clean_df.to_csv('output_data/fda_drug_enforcement_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "d8b564e1-2f5e-4897-b940-84b0368e2aa5",
    "metadata": {},
    "outputs": [
@@ -328,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "29feefd0-b7d4-43ce-8023-726509153a6f",
    "metadata": {},
    "outputs": [
@@ -359,8 +370,342 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ccee54b4-0559-4475-913f-a1b12ec8b6a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Classification\n",
+       "Class II     405\n",
+       "Class I       48\n",
+       "Class III     47\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Amount of each class of drug recalls\n",
+    "clean_df['Classification'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "02d5b954-9438-42e5-b4d9-80735245e7d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Status</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Classification</th>\n",
+       "      <th>Open FDA</th>\n",
+       "      <th>Product Type</th>\n",
+       "      <th>Event ID</th>\n",
+       "      <th>Recalling Firm</th>\n",
+       "      <th>Address 1</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Recall Number</th>\n",
+       "      <th>Product Description</th>\n",
+       "      <th>Product Quantity</th>\n",
+       "      <th>Reason for Recall</th>\n",
+       "      <th>Recall Initiation Date</th>\n",
+       "      <th>Center Classification Date</th>\n",
+       "      <th>Report Date</th>\n",
+       "      <th>Code Info</th>\n",
+       "      <th>Termination Date</th>\n",
+       "      <th>more_code_info</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Terminated</td>\n",
+       "      <td>Parsippany</td>\n",
+       "      <td>NJ</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Class II</td>\n",
+       "      <td>{'application_number': ['ANDA040422'], 'brand_...</td>\n",
+       "      <td>Drugs</td>\n",
+       "      <td>85712</td>\n",
+       "      <td>Teva Pharmaceuticals USA</td>\n",
+       "      <td>400 Interpace Pkwy</td>\n",
+       "      <td>...</td>\n",
+       "      <td>D-1285-2020</td>\n",
+       "      <td>Dextroamphetamine Saccharate, Amphetamine Aspa...</td>\n",
+       "      <td>33,280 bottles</td>\n",
+       "      <td>Some bottles may contain mixed strengths of th...</td>\n",
+       "      <td>20200522</td>\n",
+       "      <td>20200604</td>\n",
+       "      <td>20200610</td>\n",
+       "      <td>Lot #: 42614718, Exp. date 02/2021</td>\n",
+       "      <td>20210525</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Terminated</td>\n",
+       "      <td>Allegan</td>\n",
+       "      <td>MI</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Class II</td>\n",
+       "      <td>{'application_number': ['M012'], 'brand_name':...</td>\n",
+       "      <td>Drugs</td>\n",
+       "      <td>88905</td>\n",
+       "      <td>Perrigo Company PLC</td>\n",
+       "      <td>515 Eastern Ave</td>\n",
+       "      <td>...</td>\n",
+       "      <td>D-0623-2022</td>\n",
+       "      <td>No Drip Nasal Spray, Oxymetazoline HCl 0.05% N...</td>\n",
+       "      <td>1,560 bottles</td>\n",
+       "      <td>CGMP Deviations: Products were manufactured wi...</td>\n",
+       "      <td>20211026</td>\n",
+       "      <td>20220223</td>\n",
+       "      <td>20220302</td>\n",
+       "      <td>Batch: 1BK0964, Exp 01/31/2023</td>\n",
+       "      <td>20230929</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ongoing</td>\n",
+       "      <td>Dania Beach</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Class II</td>\n",
+       "      <td>{'application_number': ['part348'], 'brand_nam...</td>\n",
+       "      <td>Drugs</td>\n",
+       "      <td>94788</td>\n",
+       "      <td>Little Moon Essentials LLC</td>\n",
+       "      <td>501 Old Griffin Rd</td>\n",
+       "      <td>...</td>\n",
+       "      <td>D-0572-2024</td>\n",
+       "      <td>Little Moon Essentials, Crampy Belly Rub (Camp...</td>\n",
+       "      <td>788 glass jars</td>\n",
+       "      <td>CGMP deviations</td>\n",
+       "      <td>20240620</td>\n",
+       "      <td>20240702</td>\n",
+       "      <td>20240710</td>\n",
+       "      <td>lot code No Expiration Date on product:  a) 22...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Terminated</td>\n",
+       "      <td>Dublin</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Class II</td>\n",
+       "      <td>{'application_number': ['NDA200796'], 'brand_n...</td>\n",
+       "      <td>Drugs</td>\n",
+       "      <td>87512</td>\n",
+       "      <td>Cardinal Health Inc.</td>\n",
+       "      <td>7000 Cardinal Pl</td>\n",
+       "      <td>...</td>\n",
+       "      <td>D-0429-2021</td>\n",
+       "      <td>Edarbi (azilsartan medoxomil) tablets 80 mg 30...</td>\n",
+       "      <td>328 bottles</td>\n",
+       "      <td>CGMP Deviations: Intermittent exposure to temp...</td>\n",
+       "      <td>20210315</td>\n",
+       "      <td>20210524</td>\n",
+       "      <td>20210602</td>\n",
+       "      <td>78902-1</td>\n",
+       "      <td>20240617</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Terminated</td>\n",
+       "      <td>Dublin</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Class II</td>\n",
+       "      <td>{'application_number': ['ANDA077857'], 'brand_...</td>\n",
+       "      <td>Drugs</td>\n",
+       "      <td>89450</td>\n",
+       "      <td>CARDINAL HEALTHCARE</td>\n",
+       "      <td>7200 Cardinal Pl W</td>\n",
+       "      <td>...</td>\n",
+       "      <td>D-0179-2024</td>\n",
+       "      <td>Enoxaparin Sodium Injection, USP, 150MG/ML Sin...</td>\n",
+       "      <td>2 units</td>\n",
+       "      <td>CGMP Deviations: Products were exposed to temp...</td>\n",
+       "      <td>20220126</td>\n",
+       "      <td>20231226</td>\n",
+       "      <td>20240103</td>\n",
+       "      <td>Batch SAH06821A</td>\n",
+       "      <td>20240929</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Status         City State        Country Classification  \\\n",
+       "1  Terminated   Parsippany    NJ  United States       Class II   \n",
+       "2  Terminated      Allegan    MI  United States       Class II   \n",
+       "3     Ongoing  Dania Beach    FL  United States       Class II   \n",
+       "4  Terminated       Dublin    OH  United States       Class II   \n",
+       "5  Terminated       Dublin    OH  United States       Class II   \n",
+       "\n",
+       "                                            Open FDA Product Type Event ID  \\\n",
+       "1  {'application_number': ['ANDA040422'], 'brand_...        Drugs    85712   \n",
+       "2  {'application_number': ['M012'], 'brand_name':...        Drugs    88905   \n",
+       "3  {'application_number': ['part348'], 'brand_nam...        Drugs    94788   \n",
+       "4  {'application_number': ['NDA200796'], 'brand_n...        Drugs    87512   \n",
+       "5  {'application_number': ['ANDA077857'], 'brand_...        Drugs    89450   \n",
+       "\n",
+       "               Recalling Firm           Address 1  ... Recall Number  \\\n",
+       "1    Teva Pharmaceuticals USA  400 Interpace Pkwy  ...   D-1285-2020   \n",
+       "2         Perrigo Company PLC     515 Eastern Ave  ...   D-0623-2022   \n",
+       "3  Little Moon Essentials LLC  501 Old Griffin Rd  ...   D-0572-2024   \n",
+       "4        Cardinal Health Inc.    7000 Cardinal Pl  ...   D-0429-2021   \n",
+       "5         CARDINAL HEALTHCARE  7200 Cardinal Pl W  ...   D-0179-2024   \n",
+       "\n",
+       "                                 Product Description Product Quantity  \\\n",
+       "1  Dextroamphetamine Saccharate, Amphetamine Aspa...   33,280 bottles   \n",
+       "2  No Drip Nasal Spray, Oxymetazoline HCl 0.05% N...    1,560 bottles   \n",
+       "3  Little Moon Essentials, Crampy Belly Rub (Camp...   788 glass jars   \n",
+       "4  Edarbi (azilsartan medoxomil) tablets 80 mg 30...      328 bottles   \n",
+       "5  Enoxaparin Sodium Injection, USP, 150MG/ML Sin...          2 units   \n",
+       "\n",
+       "                                   Reason for Recall Recall Initiation Date  \\\n",
+       "1  Some bottles may contain mixed strengths of th...               20200522   \n",
+       "2  CGMP Deviations: Products were manufactured wi...               20211026   \n",
+       "3                                    CGMP deviations               20240620   \n",
+       "4  CGMP Deviations: Intermittent exposure to temp...               20210315   \n",
+       "5  CGMP Deviations: Products were exposed to temp...               20220126   \n",
+       "\n",
+       "  Center Classification Date Report Date  \\\n",
+       "1                   20200604    20200610   \n",
+       "2                   20220223    20220302   \n",
+       "3                   20240702    20240710   \n",
+       "4                   20210524    20210602   \n",
+       "5                   20231226    20240103   \n",
+       "\n",
+       "                                           Code Info Termination Date  \\\n",
+       "1                 Lot #: 42614718, Exp. date 02/2021         20210525   \n",
+       "2                     Batch: 1BK0964, Exp 01/31/2023         20230929   \n",
+       "3  lot code No Expiration Date on product:  a) 22...              NaN   \n",
+       "4                                            78902-1         20240617   \n",
+       "5                                    Batch SAH06821A         20240929   \n",
+       "\n",
+       "  more_code_info  \n",
+       "1            NaN  \n",
+       "2                 \n",
+       "3            NaN  \n",
+       "4            NaN  \n",
+       "5                 \n",
+       "\n",
+       "[5 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Clean DataFrame to only USA\n",
+    "US_recalls_df = clean_df[clean_df['Country'] == 'United States']\n",
+    "US_recalls_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0554b798-cfb3-49c1-a777-05749e308974",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "State\n",
+       "NJ    73\n",
+       "CA    57\n",
+       "VA    41\n",
+       "TX    38\n",
+       "OH    30\n",
+       "NY    30\n",
+       "IL    22\n",
+       "FL    21\n",
+       "PA    20\n",
+       "CT    13\n",
+       "NC    12\n",
+       "AZ    12\n",
+       "GA    10\n",
+       "MN     8\n",
+       "MO     8\n",
+       "MI     8\n",
+       "TN     7\n",
+       "KY     6\n",
+       "NM     5\n",
+       "AR     5\n",
+       "MD     5\n",
+       "SC     5\n",
+       "VT     4\n",
+       "WA     4\n",
+       "IA     4\n",
+       "WV     4\n",
+       "CO     4\n",
+       "MS     4\n",
+       "NV     3\n",
+       "IN     3\n",
+       "OR     3\n",
+       "MA     3\n",
+       "PR     3\n",
+       "UT     2\n",
+       "KS     2\n",
+       "LA     1\n",
+       "RI     1\n",
+       "DE     1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Amount of recalls per state\n",
+    "US_recalls_df['State'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e212cc3-f4e7-4f1e-aef0-4e35e6dd1415",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -382,7 +727,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
