--- a/FDA_Recall_Lakshmi.ipynb
+++ b/FDA_Recall_Lakshmi.ipynb
@@ -880,6 +880,25 @@
    "id": "3e212cc3-f4e7-4f1e-aef0-4e35e6dd1415",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# MAKE GRAPHS AND VISUALIZATIONS \n",
+    "\n",
+    "#Which classification was recalled most and where.\n",
+    "#\t-Class I\n",
+    "#\t-Class II\n",
+    "#\t-Class III\n",
+    "#Which companies had the most recalls\n",
+    "#\t-Which type of drugs did they have recalled.\n",
+    "#How much time it takes to close a recall.\n",
+    "#\t-who took most time to recall."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c585e6e2-0a2f-489b-9eb8-a4f09fbf17df",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
