--- a/Cleaned_US_DF.ipynb
+++ b/Cleaned_US_DF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "id": "af7e14aa-388c-4c97-b32a-0b7b267bd4a0",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "id": "da124936-e349-42fd-917b-f19ecc54d691",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "id": "ddcbbf6d-7d5c-424b-afda-2c1687ed0c1e",
    "metadata": {},
    "outputs": [],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "id": "d8b564e1-2f5e-4897-b940-84b0368e2aa5",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "id": "29feefd0-b7d4-43ce-8023-726509153a6f",
    "metadata": {},
    "outputs": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "id": "ccee54b4-0559-4475-913f-a1b12ec8b6a4",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "id": "02d5b954-9438-42e5-b4d9-80735245e7d2",
    "metadata": {},
    "outputs": [
@@ -630,7 +630,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "id": "d986cc49-c823-4542-a9b1-8d34c98d10d4",
    "metadata": {},
    "outputs": [
@@ -802,7 +802,7 @@
        "8         20210908  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "id": "96f765db-78b0-478f-a79c-3a1fd4ffc398",
    "metadata": {},
    "outputs": [],
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 10,
    "id": "0554b798-cfb3-49c1-a777-05749e308974",
    "metadata": {},
    "outputs": [
@@ -870,7 +870,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "id": "c585e6e2-0a2f-489b-9eb8-a4f09fbf17df",
    "metadata": {},
    "outputs": [
@@ -1063,7 +1063,7 @@
        "73         20220119  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 28,
    "id": "1cd3e430-5212-4dac-8146-c08cc6919731",
    "metadata": {},
    "outputs": [
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 29,
    "id": "c117930b-634e-42ea-9105-dbeaa0e320ca",
    "metadata": {},
    "outputs": [
@@ -1274,7 +1274,7 @@
        "8         20210908  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1288,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 30,
    "id": "e889a7b7-bd97-419c-ae3a-61f574432d4f",
    "metadata": {},
    "outputs": [
@@ -1329,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 31,
    "id": "3ac09706-3d0a-4f0b-9553-52ab117f182b",
    "metadata": {},
    "outputs": [
@@ -1492,7 +1492,7 @@
        "84         20220811  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 32,
    "id": "1ef507a9-9f60-497f-aa5f-3a5789256b8e",
    "metadata": {
     "scrolled": true
@@ -1677,7 +1677,7 @@
        "[150 rows x 3 columns]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1708,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 33,
    "id": "b23907b7-4ceb-4f7b-a255-5ba5cab65bcc",
    "metadata": {},
    "outputs": [
@@ -1890,7 +1890,7 @@
        "14            18  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1917,7 +1917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 34,
    "id": "82c09ee3-9bab-40bb-ad0a-40c1e2080aaf",
    "metadata": {},
    "outputs": [
@@ -1949,7 +1949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 35,
    "id": "e1026604-66ec-427b-87ab-78c49beffa70",
    "metadata": {},
    "outputs": [
@@ -1981,7 +1981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 36,
    "id": "cb6a95c4-e4f7-4a97-8190-7212aa8ce61c",
    "metadata": {},
    "outputs": [
@@ -2021,60 +2021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "id": "7b536842-0c2b-4faa-ab84-e9ea62ca202f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Firm that took the most time to close a recall:\n",
-      "Recalling Firm          Fusion IV Pharmaceuticals, Inc. dba Axia Pharm...\n",
-      "Time to Close (Days)                                               1422.0\n",
-      "Name: 2, dtype: object\n",
-      "\n",
-      "Average Time to Close Recalls by Firm:\n",
-      "                                      Recalling Firm  Time to Close (Days)\n",
-      "2  Fusion IV Pharmaceuticals, Inc. dba Axia Pharm...           1422.000000\n",
-      "3                             Herbal Doctor Remedies           1402.000000\n",
-      "1                               Cardinal Health Inc.           1137.222222\n",
-      "7                              Teligent Pharma, Inc.            992.714286\n",
-      "8                           Teva Pharmaceuticals USA            783.875000\n",
-      "9  Vita Pharmacy, LLC dba Talon Compounding Pharmacy            722.000000\n",
-      "5                                Perrigo Company PLC            625.000000\n",
-      "6                               Pharmacy Innovations            587.000000\n",
-      "4    Mckesson Medical-Surgical Inc. Corporate Office            570.187500\n",
-      "0                            Accord Healthcare, Inc.            446.166667\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Convert date columns to datetime format (adjust column names as necessary)\n",
-    "top_ten_df.loc[:, 'Recall Initiation Date'] = pd.to_datetime(top_ten_df['Recall Initiation Date'])\n",
-    "top_ten_df.loc[:, 'Termination Date'] = pd.to_datetime(top_ten_df['Termination Date'])\n",
-    "\n",
-    "# Calculate the time taken to close each recall (in days)\n",
-    "top_ten_df.loc[:, 'Time to Close (Days)'] = (top_ten_df['Termination Date'] - top_ten_df['Recall Initiation Date']).dt.days\n",
-    "\n",
-    "# Identify who took the most time to recall\n",
-    "longest_time_recall = top_ten_df[['Recalling Firm', 'Time to Close (Days)']].groupby('Recalling Firm').mean().reset_index()\n",
-    "\n",
-    "# Get the firm that took the longest on average\n",
-    "longest_time_firm = longest_time_recall.loc[longest_time_recall['Time to Close (Days)'].idxmax()]\n",
-    "\n",
-    "# Display the result\n",
-    "print(\"Firm that took the most time to close a recall:\")\n",
-    "print(longest_time_firm)\n",
-    "\n",
-    "# Optionally, you can also display all firms sorted by average recall closure time\n",
-    "print(\"\\nAverage Time to Close Recalls by Firm:\")\n",
-    "print(longest_time_recall.sort_values(by='Time to Close (Days)', ascending=False))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 41,
    "id": "e496922e-035f-4f1c-a2ad-82276a420559",
    "metadata": {},
    "outputs": [
@@ -2513,7 +2460,7 @@
        "[106 rows x 25 columns]"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2542,7 +2489,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 45,
+   "id": "3c2d030f-75a3-4ae4-9709-eef6b8525e9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\silve\\AppData\\Local\\Temp\\ipykernel_18740\\2219845131.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  top_ten_df['Recall Initiation Date'] = pd.to_datetime(top_ten_df['Recall Initiation Date'])\n",
+      "C:\\Users\\silve\\AppData\\Local\\Temp\\ipykernel_18740\\2219845131.py:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  top_ten_df['Termination Date'] = pd.to_datetime(top_ten_df['Termination Date'])\n",
+      "C:\\Users\\silve\\AppData\\Local\\Temp\\ipykernel_18740\\2219845131.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  top_ten_df['Time to Close (Days)'] = (top_ten_df['Termination Date'] - top_ten_df['Recall Initiation Date']).dt.days\n"
+     ]
+    }
+   ],
+   "source": [
+    "##FOR SOME REASON I NEED TO RUN THIS CELL EVEN WITH ITS ERORRS FOR THE NEXT CELL TO WORK WELL##\n",
+    "#How much time it takes to close a recall.\n",
+    "#\t-who took most time to recall.\n",
+    "\n",
+    "# Convert date columns to datetime format (adjust column names as necessary)\n",
+    "top_ten_df['Recall Initiation Date'] = pd.to_datetime(top_ten_df['Recall Initiation Date'])\n",
+    "top_ten_df['Termination Date'] = pd.to_datetime(top_ten_df['Termination Date'])\n",
+    "\n",
+    "# Calculate the time taken to close each recall (in days)\n",
+    "top_ten_df['Time to Close (Days)'] = (top_ten_df['Termination Date'] - top_ten_df['Recall Initiation Date']).dt.days\n",
+    "\n",
+    "# Identify who took the most time to recall\n",
+    "#longest_time_recall = top_ten_df[['Recalling Firm', 'Time to Close (Days)']].groupby('Recalling Firm').mean().reset_index()\n",
+    "\n",
+    "# Get the firm that took the longest on average\n",
+    "#longest_time_firm = longest_time_recall.loc[longest_time_recall['Time to Close (Days)'].idxmax()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "7b536842-0c2b-4faa-ab84-e9ea62ca202f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Firm that took the most time to close a recall:\n",
+      "Recalling Firm          Fusion IV Pharmaceuticals, Inc. dba Axia Pharm...\n",
+      "Time to Close (Days)                                               1422.0\n",
+      "Name: 2, dtype: object\n",
+      "\n",
+      "Average Time to Close Recalls by Firm:\n",
+      "                                      Recalling Firm  Time to Close (Days)\n",
+      "2  Fusion IV Pharmaceuticals, Inc. dba Axia Pharm...           1422.000000\n",
+      "3                             Herbal Doctor Remedies           1402.000000\n",
+      "1                               Cardinal Health Inc.           1137.222222\n",
+      "7                              Teligent Pharma, Inc.            992.714286\n",
+      "8                           Teva Pharmaceuticals USA            783.875000\n",
+      "9  Vita Pharmacy, LLC dba Talon Compounding Pharmacy            722.000000\n",
+      "5                                Perrigo Company PLC            625.000000\n",
+      "6                               Pharmacy Innovations            587.000000\n",
+      "4    Mckesson Medical-Surgical Inc. Corporate Office            570.187500\n",
+      "0                            Accord Healthcare, Inc.            446.166667\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert date columns to datetime format (adjust column names as necessary)\n",
+    "top_ten_df.loc[:, 'Recall Initiation Date'] = pd.to_datetime(top_ten_df['Recall Initiation Date'])\n",
+    "top_ten_df.loc[:, 'Termination Date'] = pd.to_datetime(top_ten_df['Termination Date'])\n",
+    "\n",
+    "# Calculate the time taken to close each recall (in days)\n",
+    "top_ten_df.loc[:, 'Time to Close (Days)'] = (top_ten_df['Termination Date'] - top_ten_df['Recall Initiation Date']).dt.days\n",
+    "\n",
+    "# Identify who took the most time to recall\n",
+    "longest_time_recall = top_ten_df[['Recalling Firm', 'Time to Close (Days)']].groupby('Recalling Firm').mean().reset_index()\n",
+    "\n",
+    "# Get the firm that took the longest on average\n",
+    "longest_time_firm = longest_time_recall.loc[longest_time_recall['Time to Close (Days)'].idxmax()]\n",
+    "\n",
+    "# Display the result\n",
+    "print(\"Firm that took the most time to close a recall:\")\n",
+    "print(longest_time_firm)\n",
+    "\n",
+    "# Optionally, you can also display all firms sorted by average recall closure time\n",
+    "print(\"\\nAverage Time to Close Recalls by Firm:\")\n",
+    "print(longest_time_recall.sort_values(by='Time to Close (Days)', ascending=False))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "id": "b554bd96-2411-47b9-bfb7-e35e423a4584",
    "metadata": {},
    "outputs": [
