--- a/FDA_Recall_Lakshmi.ipynb
+++ b/FDA_Recall_Lakshmi.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "af7e14aa-388c-4c97-b32a-0b7b267bd4a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/hunterbanda/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import pandas as pd\n",
@@ -35,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "da124936-e349-42fd-917b-f19ecc54d691",
    "metadata": {},
    "outputs": [
@@ -269,7 +278,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "d8b564e1-2f5e-4897-b940-84b0368e2aa5",
    "metadata": {},
    "outputs": [
@@ -328,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "29feefd0-b7d4-43ce-8023-726509153a6f",
    "metadata": {},
    "outputs": [
@@ -342,28 +351,17 @@
       "Akorn, Inc.                                          19\n",
       "Vita Pharmacy, LLC dba Talon Compounding Pharmacy    18\n",
       "Mckesson Medical-Surgical Inc. Corporate Office      16\n",
-      "Family Dollar Stores, Llc.                           12\n",
-      "Central Admixture Pharmacy Services Inc              11\n",
-      "Herbal Doctor Remedies                               10\n",
-      "Preferred Pharmaceuticals, Inc.                      10\n",
-      "Teva Pharmaceuticals USA                              8\n",
       "Name: count, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "firm_count_df = clean_df[\"Recalling Firm\"].value_counts().head(10)\n",
+    "firm_count_df = clean_df[\"Recalling Firm\"].value_counts().head(5)\n",
     "\n",
-    "print(firm_count_df)"
+    "print(firm_count_df)\n",
+    "\n",
+    "#Which companies (recall firms) had the most recalls?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ccee54b4-0559-4475-913f-a1b12ec8b6a4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -382,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
